public/stylesheet.css
html, body{
    background-color: black;
}
h1{
    color: grey;
    font-size: 6em;
    background-color: black;
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 0;
    margin-top: 0px;
    text-shadow: 1px 1px 1px #fff;
    border-radius: 7px;

}
.LandingPage{
    /* border: 5px solid red; */
    text-align: center;
    /* background: url(https://ak.picdn.net/shutterstock/videos/9027736/thumb/1.jpg); */
    background-repeat: no-repeat;
    background-size: 100% 100%;
}
.container{
    /* border: 5px solid black; */
    display: flex;
    flex-direction: row;
    justify-content: center;
}
.leftTrape{
    width: 200vw;
    height: 70vh;
    background: black;
    transform: skew(1deg,10deg);
    margin: 50px;
    margin-bottom: 1vh;
    box-shadow: 0px 0px 2px #fff;
    color: lawngreen;
    font-size: 17rem;
}
small{
    font-size: 1.5rem;
}
.middleSqaure{
    width: 200vw;
    height: 70vh;
    /* background: black; */
    background: url(https://www.formula1.com/content/dam/fom-website/manual/Misc/2021preseason/Mercedes2021Launch/M256866.jpg.transform/9col/image.jpg) no-repeat center;
    /* background-size: 100% 100%; */
    margin: 50px;
    margin-top: 10vh;
    margin-bottom: 1vh;
    /* box-shadow: 0px 0px 2px #fff; */
}
.rightTrape{
    width: 200vw;
    height: 70vh;
    background: black;
    transform: skew(1deg,-10deg);
    margin: 50px;
    margin-bottom: 1vh;
    box-shadow: 0px 0px 2px #fff;
    color: lawngreen;
    font-size: 3em;
}


.CareerPage{
    /* border: 5px solid green; */
    height: 91vh;
}
.CareerCarousel{
    /* border: 5px solid gold; */
    height: 92%;
    scroll-behavior: smooth;
    scroll-snap-type: y mandatory;
    overflow-y: scroll;
}
.EarlyLife{
    /* border: 5px solid pink; */
    height: 90%;
    scroll-snap-align: start;
}
#imgEL{
    width: 25vw;
    height: 40vh;
    border-radius: 50rem;
    margin-left: 10%;
}
.Karting{
    border: 5px solid purple;
    height: 90%;
    scroll-snap-align: start;
}
.FRandF3{
    /* border: 5px solid crimson; */
    height: 90%;
    scroll-snap-align: start;
}
.Formula1{
    /* border: 5px solid grey; */
    height: 90%;
    scroll-snap-align: start;
}
.CarouselF1{
    /* border: 5px dashed black; */
    height: 87%;
    width: 100%;
    display: flex;
    flex-direction: row;
    /* scroll-behavior: smooth;
    scroll-snap-type: x mandatory;
    overflow-x: scroll; */
}
h2{
    color: lawngreen;
    text-shadow: 0px 1px 1px #fff;
}
.Mclaren{
    border: 5px dashed orange;
    width: 100%;
}
.Mercedes{
    /* border: 5px dashed silver; */
    width: 100%;
    overflow-y: scroll;
    scroll-behavior: smooth;
    padding: 3px;
}
h3{
    color: lawngreen;
    text-shadow: 0px 1px 1px #fff;
}

.X44Page{
    /* border: 5px solid blue; */
    height: 91vh;
    color: #fff;
}
#imgX44{
    width: 55vw;
    height: 65vh;
    margin-left: 20vw;
}
section{
    color: #fff;
}


.Navbar{
    /* border: 5px solid yellow; */
    text-align: center;
    background-color: grey;
    position: fixed;
    bottom: 0;
    width: 100%;
    /* justify-content: space-evenly; */
    /* display: flex; */
}
#Link{
    margin: 3rem;
    font-size: 3em;
    color: lawngreen;
}
#Link:hover{
    box-shadow: 10px 10px 105px #fff;
    border-radius: 50px;
}

